[package]
name = "maikor-vm-interface"
version = "0.1.9"
edition = "2021"
authors = ["Ray Britton <raybritton@pm.me>"]
description = "Interface for VM (simulates hardware)"
license = "MIT"
repository = "https://github.com/MaikorAppPublic/vm-interface"
readme = "README.md"
homepage = "https://maikor.app"
keywords = ["game","gamedev","2d","vm"]
categories = ["games"]

[features]
default = []
argb = []
rgba = []

[dependencies]
maikor-vm-core = "0.1.15"
maikor-platform = "0.1.27"
nanorand = "0.7.0"
cpal = "0.13.5"
